<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".admin_home">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="116dp"
        android:layout_height="116dp"
        android:layout_marginStart="251dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="571dp"
        android:background="@color/blue"
        android:contentDescription="@string/img"
        android:padding="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/default_pfp"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="224dp"
        android:layout_height="52dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="77dp"
        android:layout_marginEnd="171dp"
        android:layout_marginBottom="602dp"
        android:gravity="center"
        android:text="@string/Username"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button7"
        style="@style/CustomButtonStyle"
        android:layout_width="259dp"
        android:layout_height="95dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="190dp"
        android:layout_marginEnd="76dp"
        android:layout_marginBottom="446dp"
        android:background="@drawable/rectangular_button2"
        android:text="@string/AddDetails"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button8"
        style="@style/CustomButtonStyle"
        android:layout_width="259dp"
        android:layout_height="95dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="295dp"
        android:layout_marginEnd="76dp"
        android:layout_marginBottom="341dp"
        android:background="@drawable/rectangular_button2"
        android:text="@string/CheckDetails"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button9"
        style="@style/CustomButtonStyle"
        android:layout_width="259dp"
        android:layout_height="95dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="400dp"
        android:layout_marginEnd="76dp"
        android:layout_marginBottom="236dp"
        android:background="@drawable/rectangular_button2"
        android:text="@string/EditDetails"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button10"
        style="@style/CustomButtonStyle"
        android:layout_width="259dp"
        android:layout_height="95dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="505dp"
        android:layout_marginEnd="76dp"
        android:layout_marginBottom="131dp"
        android:background="@drawable/rectangular_button2"
        android:text="@string/DeleteDetails"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button11"
        style="@style/CustomButtonStyle"
        android:layout_width="259dp"
        android:layout_height="95dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="610dp"
        android:layout_marginEnd="76dp"
        android:layout_marginBottom="26dp"
        android:background="@drawable/rectangular_button2"
        android:text="@string/ManageHoliday"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>