<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Employee_Home">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="116dp"
        android:layout_height="116dp"
        android:layout_marginStart="251dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="571dp"
        android:background="@color/green"
        android:contentDescription="@string/img"
        android:padding="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/default_pfp"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="224dp"
        android:layout_height="52dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="77dp"
        android:layout_marginEnd="171dp"
        android:layout_marginBottom="602dp"
        android:gravity="center"
        android:text="@string/Username"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button4"
        style="@style/CustomButtonStyle"
        android:layout_width="259dp"
        android:layout_height="105dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="250dp"
        android:layout_marginEnd="76dp"
        android:layout_marginBottom="376dp"
        android:background="@drawable/rectangular_button"
        android:text="@string/Details"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button5"
        style="@style/CustomButtonStyle"
        android:layout_width="259dp"
        android:layout_height="105dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="370dp"
        android:layout_marginEnd="76dp"
        android:layout_marginBottom="256dp"
        android:background="@drawable/rectangular_button"
        android:text="@string/Edit"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button6"
        style="@style/CustomButtonStyle"
        android:layout_width="259dp"
        android:layout_height="105dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="490dp"
        android:layout_marginEnd="76dp"
        android:layout_marginBottom="136dp"
        android:background="@drawable/rectangular_button"
        android:text="@string/Holiday"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>

