<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity_main">

    <Button
        android:id="@+id/button2"
        android:layout_width="166dp"
        android:layout_height="93dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="357dp"
        android:layout_marginEnd="229dp"
        android:layout_marginBottom="281dp"
        android:backgroundTint="@color/green"
        android:text="@string/employee_button"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="166dp"
        android:layout_height="93dp"
        android:layout_marginStart="229dp"
        android:layout_marginTop="357dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="281dp"
        android:backgroundTint="@color/blue"
        android:text="@string/admin_button"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="223dp"
        android:layout_height="69dp"
        android:layout_marginStart="94dp"
        android:layout_marginTop="126dp"
        android:layout_marginEnd="94dp"
        android:layout_marginBottom="536dp"
        android:text="@string/WorkFlow"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>

