<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editTextText4"
        android:layout_width="213dp"
        android:layout_height="51dp"
        android:layout_marginStart="99dp"
        android:layout_marginTop="170dp"
        android:layout_marginEnd="99dp"
        android:layout_marginBottom="510dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="center"
        android:inputType="text"
        android:text="@string/user_txt2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor,VisualLintOverlap" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="213dp"
        android:layout_height="51dp"
        android:layout_marginStart="99dp"
        android:layout_marginTop="340dp"
        android:layout_marginEnd="99dp"
        android:layout_marginBottom="340dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor,TextContrastCheck" />


    <EditText
        android:id="@+id/editTextText5"
        android:layout_width="213dp"
        android:layout_height="51dp"
        android:layout_marginStart="99dp"
        android:layout_marginTop="275dp"
        android:layout_marginEnd="99dp"
        android:layout_marginBottom="405dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="text"
        android:text="@string/username"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="116dp"
        android:layout_height="116dp"
        android:layout_marginStart="144dp"
        android:layout_marginTop="63dp"
        android:layout_marginEnd="72dp"
        android:layout_marginBottom="561dp"
        android:background="#000000"
        android:contentDescription="@string/img"
        android:padding="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/default_pfp"
        tools:ignore="ImageContrastCheck" />

    <Button
        android:id="@+id/button"
        android:layout_width="168dp"
        android:layout_height="79dp"
        android:layout_marginStart="121dp"
        android:layout_marginTop="455dp"
        android:layout_marginEnd="122dp"
        android:layout_marginBottom="197dp"
        android:backgroundTint="@color/red"
        android:text="@string/user_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>